@@ -1,0 +1,2 @@
+kick door
+quit
