@@ -1,0 +1,2 @@
+take off door
+quit
