@@ -1,0 +1,2 @@
+throw man
+quit
