@@ -1,0 +1,2 @@
+kick man
+quit
